# learnopengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
source/: main.cpp
source/glad/: glad.c
source/glad/glad/: glad.h
source/opengl_sample/: lib.cpp  lib.hpp
test/: CMakeLists.txt
test/source/: learnopengl_test.cpp
